# gtasks2ical

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  configure.ac
data/: Makefile.am  gtasks2ical.conf
debian/: changelog  control  copyright  files  manpages  rules
doc/: Doxyfile  Makefile.am  main.doc.in
doc/man/: Makefile.am  gtasks2ical.1  gtasks2ical.1.src  gtasks2ical.conf.5.src
m4/: version.m4
script/: build-source-tarball.sh
src/: Makefile.am  gtasks.c  gtasks.h  gtasks2ical.c  gtasks2ical.h  icalendar.c  icalendar.h  initializeconfig.c  merge.c  merge.h  oauth2-google.c  oauth2-google.h  oauth2.c  oauth2.h  old-code.c  postform.c  postform.h
test/: Makefile.am  atlocal.in  dispatch.c  oauth2.at  test-oauth2.c  testfunctions.h
test/data/: google-login.html  oauth2-confirm.html  password.template
